kubernetes/apps/monitoring/headlamp/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.nerdz.cloud/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - "headlamp.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: headlamp
          port: 80
