kubernetes/apps/monitoring/headlamp/app/securitypolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: headlamp-oidc
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: headlamp
  oidc:
    provider:
      issuer: "https://sso.${SECRET_OG_DOMAIN}/application/o/headlamp/"
    clientID: "p89dqYUKRra3vVmJptEaWY6ppurNvtWfBUpaovEz"
    clientSecret:
      name: headlamp-oidc-secret
